活动管理工能上传

--- a/DOVE.Application/DOVE.Application.Busines/DOVE.Application.Busines.csproj
+++ b/DOVE.Application/DOVE.Application.Busines/DOVE.Application.Busines.csproj
@@ -47,6 +47,8 @@
     <Compile Include="AuthorizeManage\AuthorizeBLL.cs" />
     <Compile Include="AuthorizeManage\ModuleFormBLL.cs" />
     <Compile Include="AuthorizeManage\ModuleFormInstanceBLL.cs" />
+    <Compile Include="DoveManage\T_ActivityBLL.cs" />
+    <Compile Include="DoveManage\T_Activity_DetailBLL.cs" />
     <Compile Include="PublicInfoManage\ScheduleBLL.cs" />
     <Compile Include="ReportManage\RptTempBLL.cs" />
     <Compile Include="SystemManage\LogBLL.cs" />
