--- a/DOVE.Application/DOVE.Application.Web/XmlConfig/system.config
+++ b/DOVE.Application/DOVE.Application.Web/XmlConfig/system.config
@@ -56,5 +56,5 @@
   <add key="SMSUrl" value="http://localhost:80/msg/HttpBatchSendSM" />
   <!-- ================== 7：即时通信参数 ================== -->
   <!-- SignalR服务接口-->
-  <add key="SignalRUrl" value="http://localhost:8081/signalr" />
+  <!--<add key="SignalRUrl" value="http://localhost:8081/signalr" />-->
 </appSettings>
