--- a/DOVE.Application/DOVE.Application.Web/Web.config
+++ b/DOVE.Application/DOVE.Application.Web/Web.config
@@ -30,6 +30,8 @@
         <add namespace="System.Web.WebPages" />
       </namespaces>
     </pages>
+    <!--添加上传文件最大长度的限制 add by zy 20171201-->
+    <httpRuntime maxRequestLength="614400000" executionTimeout="200" enable="true" />
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
@@ -42,17 +44,24 @@
       <add name="ExtensionlessUrlHandler-ISAPI-4.0_64bit" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" modules="IsapiModule" scriptProcessor="%windir%\Microsoft.NET\Framework64\v4.0.30319\aspnet_isapi.dll" preCondition="classicMode,runtimeVersionv4.0,bitness64" responseBufferLimit="0" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="GET,HEAD,POST,DEBUG,PUT,DELETE,PATCH,OPTIONS" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
-        <defaultDocument>
-            <files>
-                <clear />
-                <add value="index.htm" />
-                <add value="Default.htm" />
-                <add value="Default.asp" />
-                <add value="index.html" />
-                <add value="iisstart.htm" />
-                <add value="default.aspx" />
-            </files>
-        </defaultDocument>
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="index.htm" />
+        <add value="Default.htm" />
+        <add value="Default.asp" />
+        <add value="index.html" />
+        <add value="iisstart.htm" />
+        <add value="default.aspx" />
+      </files>
+    </defaultDocument>
+    <!--添加上传文件最大长度的限制 add by zy 20171201-->
+    <security>
+      <requestFiltering>
+        <requestLimits maxQueryString="614400000" maxAllowedContentLength="614400000" />
+        <!--600MB-->
+      </requestFiltering>
+    </security>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
