增加活动信息-多活动导入功能

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+*.cache
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
@@ -260,5 +261,4 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
-/DOVE.Application/DOVE.Application.Web/Resource/DocumentFile/System/20171201
-/DOVE.Application/DOVE.Application.Web/Resource/DocumentFile/System/20171204
+/DOVE.Application/DOVE.Application.Web/Resource/
