--- a/DOVE.Application/DOVE.Application.Web/XmlConfig/system.config
+++ b/DOVE.Application/DOVE.Application.Web/XmlConfig/system.config
@@ -40,18 +40,18 @@
   <!-- 系统错误自动发送邮件 -->
   <add key="ErrorToMail" value="true" />
   <!-- 发出邮箱的名称 -->
-  <add key="MailName" value="邮件中心" />
+  <add key="MailName" value="鸽子队邮件中心" />
   <!-- 发出邮箱的地址 -->
-  <add key="MailUserName" value="sendbug@DOVE.cn" />
+  <add key="MailUserName" value="zhangyong@rhtect.com" />
   <!-- 发出邮箱的密码 -->
-  <add key="MailPassword" value="learun123" />
+  <add key="MailPassword" value="Foxconn99" />
   <!-- 发出邮箱设置邮箱主机 -->
-  <add key="MailHost" value="smtp.ym.163.com" />
+  <add key="MailHost" value="smtp.exmail.qq.com" />
   <!-- ================== 6：短信参数 ================== -->
   <!-- 短信账户 -->
-  <add key="SMSAccount" value="jumuxx_lr" />
+  <add key="SMSAccount" value="" />
   <!-- 短信密码 -->
-  <add key="SMSPswd" value="Lrxx158753" />
+  <add key="SMSPswd" value="" />
   <!-- 短信接口地址 -->
   <add key="SMSUrl" value="http://localhost:80/msg/HttpBatchSendSM" />
   <!-- ================== 7：即时通信参数 ================== -->
